--- a/source/404.html
+++ b/source/404.html
@@ -1,16 +1,18 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <html>
 <head>
-<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>	
+    <meta http-equiv="content-type" content="text/html;charset=utf-8;"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="robots" content="all" />
+    <meta name="robots" content="index,follow"/>
+    <link rel="stylesheet" type="text/css" href="https://qzone.qq.com/gy/404/style/404style.css">
 </head>
-
-  <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs>
-  	<a-marker preset="hiro">
-            <a-box position='0 0.5 0' material='color: black;'></a-box>
-  	</a-marker>
-  	<a-entity camera></a-entity>
-    </a-scene>
-  </body>
+<body>
+<script type="text/plain" src="http://www.qq.com/404/search_children.js"
+        charset="utf-8" homePageUrl="/"
+        homePageName="回到我的主页">
+</script>
+<script src="https://qzone.qq.com/gy/404/data.js" charset="utf-8"></script>
+<script src="https://qzone.qq.com/gy/404/page.js" charset="utf-8"></script>
+</body>
 </html>
